--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,10 @@
-attrs==25.3.0
-cattrs==25.1.1
-certifi==2025.7.14
-charset-normalizer==3.4.2
-cloudpickle==3.1.1
-contourpy==1.3.2
-cycler==0.12.1
-fonttools==4.59.0
-idna==3.10
-inflect==7.5.0
-joblib==1.5.1
-kiwisolver==1.4.8
-llvmlite==0.44.0
-matplotlib==3.10.3
-more-itertools==10.7.0
-mplsoccer==1.5.1
-numba==0.61.2
-numpy==2.2.6
-packaging==25.0
-pandas==2.3.1
-pillow==11.3.0
-platformdirs==4.3.8
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.4
-requests-cache==1.2.1
-scikit-learn==1.7.1
-scipy==1.16.0
-seaborn==0.13.2
-shap==0.48.0
-six==1.17.0
-slicer==0.0.8
-statsbombpy==1.16.0
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typeguard==4.4.4
-typing_extensions==4.14.1
-tzdata==2025.2
-url-normalize==2.2.1
-urllib3==2.5.0
-xgboost==3.0.2
+pandas>=2.3.0
+numpy>=2.2.0
+matplotlib>=3.7.0
+seaborn>=0.13.0
+tqdm>=4.60.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+shap>=0.42.0
+mplsoccer>=1.5.1
+statsbombpy>=1.16.0
